# ursa-minor

./: .env  .env.example  .gitignore  .licensesnip  Cargo.toml  README.md  build.rs  flake.nix  test.nbt
.github/workflows/: build.yml
rules/: guild.json  museum.json  player.json  skyblock-bingo.json  skyblock-profiles.json  status.json  v2-garden.json  v2-guild.json  v2-museum.json  v2-player.json  v2-skyblock-bingo.json  v2-skyblock-profiles.json  v2-status.json
src/: hypixel.rs  lbin.rs  main.rs  meta.rs  mojang.rs  neu.rs  util.rs
