[package]
name = "ursa-minor"
version = "0.1.0"
edition = "2021"

[features]
neu = []
default = ["neu"]


[dependencies]

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.dotenv]
version = "*"

[dependencies.hyper-tls]
version = "*"

[dependencies.hyper]
version = "*"
features = ["full"]

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.url]
version = "*"

[dependencies.tokio]
version = "*"
features = ["rt-multi-thread", "macros", "signal", "fs"]

[dependencies.anyhow]
version = "*"

[dependencies.serde_json]
version = "*"

[dependencies.uuid]
version = "*"
features = ["v4", "fast-rng", "serde"]

[dependencies.jwt]
version = "*"
[dependencies.hmac]
version = "*"
[dependencies.sha2]
version = "*"

[dependencies.redis]
version = "*"
features = ["aio", "connection-manager", "tokio-comp"]
