[package]
name = "ursa-minor"
version = "0.1.0"
edition = "2021"

[features]
neu = []
lbin = ["influxdb"]
influxdb = ["dep:influxdb"]
default = ["neu", "lbin"]

[build-dependencies]
built = "0.7.7"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
futures = "0.3.31"
simdnbt = "0.7.1"
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-tracy = "0.11.4"

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dependencies.flate2]
version = "1.1.1"
default-features = false
features = ["zlib-rs"]

[dependencies.influxdb]
version = "0.7.2"
features = ["derive"]
optional = true

[dependencies.serde_with]
version = "3.12.0"
features = ["base64"]

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.dotenv]
version = "*"

[dependencies.hyper-tls]
version = "*"

[dependencies.hyper]
version = "*"
features = ["full"]

[dependencies.serde]
version = "*"
features = ["derive", "rc"]

[dependencies.url]
version = "*"

[dependencies.tokio]
version = "*"
features = ["rt-multi-thread", "macros", "signal", "fs"]

[dependencies.anyhow]
version = "*"

[dependencies.serde_json]
version = "*"

[dependencies.uuid]
version = "*"
features = ["v4", "fast-rng", "serde"]

[dependencies.jwt]
version = "*"
[dependencies.hmac]
version = "*"
[dependencies.sha2]
version = "*"

[dependencies.redis]
version = "*"
features = ["aio", "connection-manager", "tokio-comp"]
